docs/api/qiskit/0.19/qiskit.transpiler.passes.BarrierBeforeFinalMeasurements.mdx
---
title: BarrierBeforeFinalMeasurements (v0.19)
description: API reference for qiskit.transpiler.passes.BarrierBeforeFinalMeasurements in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.BarrierBeforeFinalMeasurements
---

# BarrierBeforeFinalMeasurements

<Class id="qiskit.transpiler.passes.BarrierBeforeFinalMeasurements" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/transpiler/passes/utils/barrier_before_final_measurements.py" signature="BarrierBeforeFinalMeasurements(*args, **kwargs)" modifiers="class">
  Add a barrier before final measurements.

  This pass adds a barrier before the set of final measurements. Measurements are considered final if they are followed by no other operations (aside from other measurements or barriers.)

  ## Attributes

  <span id="barrierbeforefinalmeasurements-is-analysis-pass" />

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.BarrierBeforeFinalMeasurements.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  <span id="barrierbeforefinalmeasurements-is-transformation-pass" />

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.BarrierBeforeFinalMeasurements.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>

  ## Methods

  <span id="barrierbeforefinalmeasurements-name" />

  ### name

  <Function id="qiskit.transpiler.passes.BarrierBeforeFinalMeasurements.name" signature="BarrierBeforeFinalMeasurements.name()">
    Return the name of the pass.
  </Function>

  <span id="barrierbeforefinalmeasurements-run" />

  ### run

  <Function id="qiskit.transpiler.passes.BarrierBeforeFinalMeasurements.run" signature="BarrierBeforeFinalMeasurements.run(dag)">
    Run the BarrierBeforeFinalMeasurements pass on dag.
  </Function>
</Class>

